--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "start:dev": "set NODE_ENV=development && set PORT=4000 && nodemon --inspect index.js",
     "eslint": "eslint ./",
     "eslint-fix": "eslint ./ --fix",
     "build": "webpack",
@@ -18,13 +17,15 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "pm2": "^4.2.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "error": "^10.0.1",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "nodemon": "^2.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
